--- a/styles/style.css
+++ b/styles/style.css
@@ -23,7 +23,7 @@ body {
 }
 /* banner part style */
 .banner {
-	background-image: url(../images/Hero-bg.png);
+	background-image: url("../images/Hero-bg.png");
 	background-repeat: no-repeat;
 	background-size: cover;
 	margin: 50px auto;
