--- a/styles/style.css
+++ b/styles/style.css
@@ -80,6 +80,9 @@ body {
 	border-radius: 8px;
 	padding: 21px 24px;
 }
+.banner-btn:hover {
+	border: 3px solid red;
+}
 /* main style */
 
 /* skill design */
@@ -273,4 +276,28 @@ body {
 }
 .support-submit-btn:hover {
 	border: 3px solid white;
+}
+/* footer styles */
+.footer-container {
+	display: flex;
+	width: 100%;
+	height: 100px;
+	background-color: rgba(0, 178, 255, 0.1);
+	justify-content: space-between;
+	align-items: center;
+	padding: 32px 105px;
+	border-radius: 16px;
+	margin-top: 50px;
+}
+.footer-title {
+	font-size: 20px;
+	font-weight: 600;
+}
+.footer-list {
+	display: flex;
+	gap: 20px;
+}
+.list-item {
+	list-style: none;
+	display: flex;
 }
